make my profile prettier

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm Emiliano 😎</h1>
-          <img src="/images/profile.png" width="100px" alt="Emiliano Rodríguez">
+          <img src="images/profile.png" width="100px" alt="Emiliano Rodríguez">
             <p>I love travel ✈️.I am passionate about new technologies , web development, I really like learning new things, and read 📚.</p>
               <a href="#" class="btn-blue">Discover Books</a>
       </div>
